import { actionValue, dynamicValue, EditableValueBuilder } from "@mendix/piw-utils-internal";
import { Big } from "big.js";
import { fireEvent, render } from "@testing-library/react-native";
import { ValueStatus, DynamicValue } from "mendix";

import { Props, Slider } from "../Slider";

jest.mock("@miblanchard/react-native-slider", () => {
    const { View } = require("react-native");
    return {
        Slider: (props: any) => (
            <View
                testID="mocked-slider"
                {...props}
                onValueChange={(values: number[]) => props.onValueChange?.(values)}
                onSlidingComplete={(values: number[]) => props.onSlidingComplete?.(values)}
            />
        )
    };
});

describe("Slider", () => {
    const noValue: DynamicValue<Big> = { status: ValueStatus.Unavailable, value: undefined };
    let defaultProps: Props;

    beforeEach(() => {
        defaultProps = {
            name: "slider-test",
            style: [],
            valueAttribute: new EditableValueBuilder<Big>().withValue(new Big(140)).build(),
            editable: "default",
            minimumValue: dynamicValue<Big>(new Big(0)),
            maximumValue: dynamicValue<Big>(new Big(280)),
            stepSize: dynamicValue<Big>(new Big(1))
        };
    });

    it("renders", () => {
        const component = render(<Slider {...defaultProps} />);
        expect(component.toJSON()).toMatchSnapshot();
    });

    it("renders no error while the value is resolving", () => {
        const component = render(
            <Slider {...defaultProps} valueAttribute={new EditableValueBuilder<Big>().isLoading().build()} />
        );
        expect(component.queryByTestId(`${defaultProps.name}-validation-message`)).toBeNull();
    });

    it("renders an error when the minimum is greater than the maximum", () => {
        const component = render(<Slider {...defaultProps} minimumValue={dynamicValue(new Big(300))} />);
        expect(component.queryByText("The minimum value can not be greater than the maximum value.")).not.toBeNull();
    });

    it("renders an error when the step size is negative", () => {
        const component = render(<Slider {...defaultProps} stepSize={dynamicValue(new Big(-10))} />);
        expect(component.queryByText("The step size can not be zero or less than zero.")).not.toBeNull();
    });

    it("renders an error when the step size is empty", () => {
        const component = render(<Slider {...defaultProps} stepSize={noValue} />);
        expect(component.queryByText("No step size provided.")).not.toBeNull();
    });

    it("renders an error when the minimum is empty", () => {
        const component = render(<Slider {...defaultProps} minimumValue={noValue} />);
        expect(component.queryByText("No minimum value provided.")).not.toBeNull();
    });

    it("renders an error when the maximum is empty", () => {
        const component = render(<Slider {...defaultProps} maximumValue={noValue} />);
        expect(component.queryByText("No maximum value provided.")).not.toBeNull();
    });

    it("renders an error when the minimum is equal to the maximum", () => {
        const value = new Big(10);
        const component = render(
            <Slider
                {...defaultProps}
                valueAttribute={new EditableValueBuilder<Big>().withValue(value).build()}
                minimumValue={dynamicValue(value)}
                maximumValue={dynamicValue(value)}
            />
        );
        expect(component.queryByText("The minimum value can not be equal to the maximum value.")).not.toBeNull();
    });

    it("renders an error when the value is less than the minimum", () => {
        const component = render(
            <Slider
                {...defaultProps}
                valueAttribute={new EditableValueBuilder<Big>().withValue(new Big(-50)).build()}
            />
        );
        expect(component.queryByText("The current value can not be less than the minimum value.")).not.toBeNull();
    });

    it("renders an error when the value is greater than the maximum", () => {
        const component = render(
            <Slider
                {...defaultProps}
                valueAttribute={new EditableValueBuilder<Big>().withValue(new Big(300)).build()}
            />
        );
        expect(component.queryByText("The current value can not be greater than the maximum value.")).not.toBeNull();
    });

    it("renders a validation message", () => {
        const value = new EditableValueBuilder<Big>().withValidation("Invalid").build();
        const component = render(<Slider {...defaultProps} valueAttribute={value} />);

        expect(component.queryByText("Invalid")).not.toBeNull();
    });

    it("renders as disabled when editable is never", () => {
        const component = render(<Slider {...defaultProps} editable={"never"} />);
        const slider = component.getByTestId("mocked-slider");
        expect(slider.props.disabled).toBe(true);
    });

    it("renders as enabled when editable is default", () => {
        const component = render(<Slider {...defaultProps} />);
        const slider = component.getByTestId("mocked-slider");
        expect(slider.props.disabled).toBe(false);
    });

    it("passes correct min/max/step to the slider", () => {
        const component = render(<Slider {...defaultProps} />);
        const slider = component.getByTestId("mocked-slider");
        expect(slider.props.minimumValue).toBe(0);
        expect(slider.props.maximumValue).toBe(280);
        expect(slider.props.step).toBe(1);
    });

    it("calls onValueChange when sliding", () => {
        const component = render(<Slider {...defaultProps} />);
        const slider = component.getByTestId("mocked-slider");

        fireEvent(slider, "onValueChange", [200]);

        expect(defaultProps.valueAttribute.setValue).toHaveBeenCalledWith(new Big(200));
    });

    it("calls onChange action on sliding complete", () => {
        const onChangeAction = actionValue();
        const component = render(<Slider {...defaultProps} onChange={onChangeAction} />);
        const slider = component.getByTestId("mocked-slider");

        fireEvent(slider, "onSlidingComplete", [200]);

        expect(defaultProps.valueAttribute.setValue).toHaveBeenCalledWith(new Big(200));
        expect(onChangeAction.execute).toHaveBeenCalledTimes(1);
    });

    it("does not call onChange when value hasn't changed", () => {
        const onChangeAction = actionValue();
        const component = render(<Slider {...defaultProps} onChange={onChangeAction} />);
        const slider = component.getByTestId("mocked-slider");

        fireEvent(slider, "onSlidingComplete", [140]);

        expect(onChangeAction.execute).not.toHaveBeenCalled();
    });

    it("applies custom styles", () => {
        const component = render(
            <Slider
                {...defaultProps}
                style={[
                    {
                        container: { width: 100 },
                        track: {},
                        trackDisabled: {},
                        minimumTrack: {},
                        minimumTrackDisabled: {},
                        maximumTrack: {},
                        maximumTrackDisabled: {},
                        thumb: {},
                        thumbActive: {},
                        thumbDisabled: {},
                        validationMessage: {},
                        highlight: {},
                        highlightDisabled: {},
                        marker: {},
                        markerDisabled: {}
                    }
                ]}
            />
        );
        expect(component.toJSON()).toMatchSnapshot("with custom styles");
    });
});
