// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider applies custom styles: with custom styles 1`] = `
<View
  style={
    {
      "width": 100,
    }
  }
  testID="slider-test"
>
  <View
    disabled={false}
    maximumTrackStyle={
      {
        "borderRadius": 2,
        "height": 4,
      }
    }
    maximumValue={280}
    minimumTrackStyle={
      {
        "backgroundColor": "rgb(30, 76, 231)",
      }
    }
    minimumValue={0}
    onSlidingComplete={[Function]}
    onValueChange={[Function]}
    step={1}
    testID="mocked-slider"
    thumbStyle={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DDDDDD",
        "borderRadius": 30,
        "borderWidth": 1,
        "elevation": 3,
        "height": 30,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 3,
          "width": 0,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 1,
        "width": 30,
      }
    }
    trackStyle={
      {
        "borderRadius": 2,
        "height": 4,
      }
    }
    value={140}
  />
</View>
`;

exports[`Slider renders 1`] = `
<View
  style={{}}
  testID="slider-test"
>
  <View
    disabled={false}
    maximumTrackStyle={
      {
        "borderRadius": 2,
        "height": 4,
      }
    }
    maximumValue={280}
    minimumTrackStyle={
      {
        "backgroundColor": "rgb(30, 76, 231)",
      }
    }
    minimumValue={0}
    onSlidingComplete={[Function]}
    onValueChange={[Function]}
    step={1}
    testID="mocked-slider"
    thumbStyle={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DDDDDD",
        "borderRadius": 30,
        "borderWidth": 1,
        "elevation": 3,
        "height": 30,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 3,
          "width": 0,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 1,
        "width": 30,
      }
    }
    trackStyle={
      {
        "borderRadius": 2,
        "height": 4,
      }
    }
    value={140}
  />
</View>
`;
